--- a/A6/A6.tex
+++ b/A6/A6.tex
@@ -10,4 +10,40 @@
 
 \begin{document}
 
+\section{1週目 - 実験1}
+\subsection{実験結果}
+\subsection{課題1}
+
+\section{1週目 - 実験2}
+\subsection{実験結果}
+\subsection{課題2}
+　以下の式を用いて曲線フィッティングを行った.
+\begin{equation}
+K = aV^b
+\end{equation}
+\noindent
+ただし、VはUpper Level と Lower Level の中間の値である. 両辺の対数を取ると,
+\begin{equation}
+\log K = \log a + b \log V
+\end{equation}
+\noindent
+となる。これを最小二乗法で解くと,
+\begin{equation}
+a = \exp(\log a), b = b
+\end{equation}
+となる.
+\noindent
+計算結果は, $a = 3.87 \times 10^8$, $b = -3.80$であった.
+作成したグラフを以下に図2-1として示す.
+
+
+\section{1週目 - 実験3}
+\subsection{実験結果}
+\subsection{課題3}
+
+\section{2週目 - 実験}
+\subsection{実験結果}
+\subsection{課題}
+
+
 \end{document}
