--- a/A6/A6.tex
+++ b/A6/A6.tex
@@ -11,13 +11,15 @@
 \begin{document}
 
 \section{1週目 - 実験1}
-\subsection{実験結果}
 \subsection{課題1}
+以下に5つのデータの蛍光量と, その平均値と標準偏差を示す.
+
 
 \section{1週目 - 実験2}
-\subsection{実験結果}
 \subsection{課題2}
-　以下の式を用いて曲線フィッティングを行った.
+　実験で得られたデータを以下に表2-1として示す.
+
+以下の式を用いて曲線フィッティングを行った.
 \begin{equation}
 K = aV^b
 \end{equation}
@@ -36,13 +38,32 @@ a = \exp(\log a), b = b
 計算結果は, $a = 3.87 \times 10^8$, $b = -3.80$であった.
 作成したグラフを以下に図2-1として示す.
 
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/fig1-2.png}
+    \caption{図2-1: 宇宙線のエネルギースペクトル}
+\end{figure}
+
 
 \section{1週目 - 実験3}
-\subsection{実験結果}
 \subsection{課題3}
+　実験により得たデータ100個の$\Delta t$を用いて入射角$\theta$を以下の式で求めた.
+\begin{equation}
+    \theta = sin^{-1}\left(\frac{2.5}{c \Delta t}\right)
+\end{equation}
+\noindent
+宇宙線の入射角度の分布をヒストグラムとして, 以下に図3-1として図示する.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/fig1-3.png}
+    \caption{図3-1: 宇宙線の入射角度の分布}
+\end{figure}
+
 
 \section{2週目 - 実験}
-\subsection{実験結果}
 \subsection{課題}
 
 
