--- a/A6/A6_day1.ipynb
+++ b/A6/A6_day1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "id": "4be17801-86d9-4465-877f-4502aaad8500",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "import japanize_matplotlib\n",
     "import numpy as np\n",
-    "from scipy.integrate import simpson \n",
+    "from scipy.integrate import simpson\n",
     "from scipy.optimize import curve_fit\n",
     "import os"
    ]
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "74b09cb4-d9ca-4c3b-943f-66af9c1ec104",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "id": "d41ebdfe-5112-4606-ba35-7f51132445de",
    "metadata": {},
    "outputs": [],
@@ -79,6 +79,7 @@
     "    r = 50 #抵抗\n",
     "    g = 1e6\n",
     "    current = (np.abs(voltage))/ r\n",
+    "    time = time + 4.9e-8\n",
     "    q = simpson(current, time)\n",
     "    amount = q / g\n",
     "    return amount"
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "id": "8d242424-8367-4cbf-9303-047fc4403ac2",
    "metadata": {},
    "outputs": [
@@ -94,22 +95,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1番目のデータの蛍光量: 2.1338001847078482e-17\n",
+      "1番目のデータの蛍光量: 2.1338001847078488e-17\n",
       "---------------------------\n",
       "\n",
-      "2番目のデータの蛍光量: 2.576800283999513e-17\n",
+      "2番目のデータの蛍光量: 2.5768002839995127e-17\n",
       "---------------------------\n",
       "\n",
-      "3番目のデータの蛍光量: 1.9456005280019676e-17\n",
+      "3番目のデータの蛍光量: 1.9456005280019682e-17\n",
       "---------------------------\n",
       "\n",
-      "4番目のデータの蛍光量: 2.6524004312207594e-17\n",
+      "4番目のデータの蛍光量: 2.6524004312207585e-17\n",
       "---------------------------\n",
       "\n",
       "5番目のデータの蛍光量: 1.9387337536554866e-17\n",
       "---------------------------\n",
       "\n",
-      "平均値: 2.2494670363171152e-17, 標準偏差: 3.0717136069542472e-18\n"
+      "平均値: 2.249467036317115e-17, 標準偏差: 3.0717136069542422e-18\n"
      ]
     }
    ],
@@ -131,7 +132,6 @@
     "   print(f\"{i}番目のデータの蛍光量: {f_amount}\")\n",
     "   print(\"---------------------------\\n\")\n",
     "   i = i + 1\n",
-    "\n",
     "mean = np.mean(result)\n",
     "std = np.std(result)\n",
     "print(f\"平均値: {mean}, 標準偏差: {std}\")"
@@ -268,7 +268,7 @@
     "plt.scatter(x, y, label='data', color='blue') \n",
     "plt.xlabel('$V_0$ (mV)', fontsize=12)\n",
     "plt.ylabel('K (回/秒)', fontsize=12)\n",
-    "plt.title('宇宙線のエネルギースペクトル', fontsize=14)\n",
+    "#plt.title('宇宙線のエネルギースペクトル', fontsize=14)\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "#plt.savefig(\"fig1-2-1.png\")\n",
@@ -320,7 +320,7 @@
     "plt.plot(x_fit, y_fit, label='近似曲線: $y = (3.87×10^8) x^{-3.80}$')\n",
     "plt.xlabel('$V_0$ (mV)', fontsize=12)\n",
     "plt.ylabel('K (回/秒)', fontsize=12)\n",
-    "plt.title('宇宙線のエネルギースペクトル', fontsize=14)\n",
+    "#plt.title('宇宙線のエネルギースペクトル', fontsize=14)\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.savefig(\"fig1-2.png\")\n",
@@ -508,7 +508,7 @@
     "plt.hist(theta, bins=bins, edgecolor=\"blue\", color=\"skyblue\")\n",
     "plt.xlabel(\"入射角 θ [°]\", fontsize=14)\n",
     "plt.ylabel(\"データ数\", fontsize=14)\n",
-    "plt.title(\"入射角のヒストグラム（0〜90°）\", fontsize=16)\n",
+    "#plt.title(\"入射角のヒストグラム（0〜90°）\", fontsize=16)\n",
     "plt.xticks(bins)\n",
     "plt.grid(axis=\"y\", linestyle=\"--\", alpha=0.7)\n",
     "plt.tight_layout()\n",
