--- a/A6/A6.tex
+++ b/A6/A6.tex
@@ -43,16 +43,25 @@
 \section{1週目 - 実験2}
 \subsection{課題2}
 　実験で得られたデータを以下に表2-1として示す.
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表2-1: 宇宙線のエネルギースペクトル}
+    \includegraphics[width=10cm]{Pictures/data1-2-1.png}
+\end{figure}
 
-以下の式を用いて曲線フィッティングを行った.
+\noindent
+また, 以下の式を用いて曲線フィッティングを行った.
 \begin{equation}
 K = aV^b
 \end{equation}
 \noindent
 ただし、VはUpper Level と Lower Level の中間の値である. 両辺の対数を取ると,
+
 \begin{equation}
 \log K = \log a + b \log V
 \end{equation}
+
 \noindent
 となる。これを最小二乗法で解くと,
 \begin{equation}
