--- a/A5/A5.tex
+++ b/A5/A5.tex
@@ -9,5 +9,99 @@
 \usepackage[dvipdfmx, x11names]{xcolor}
 
 \begin{document}
+\section{検討課題}
+\paragraph{(1)}
+
+以下の図1-1にCGS電磁単位系とMKS単位系の換算表を示す.
+
+\begin{table}[H]
+    \centering
+    \caption{MKSA単位系とCGS電磁単位系の比較表}
+    \begin{tabular}{|l|l|l|}
+    \hline
+    \textbf{電気・磁気の量} & \textbf{MKSA単位} & \textbf{CGS電磁単位} \\
+    \hline
+    起電力・電位 & 1V (volt) & \(10^8\) emu \\
+    電磁界の強さ & 1V/m (ampere) & \(10^6\) emu \\
+    電流 & 1A (ampare) & \(10^{-1}\) Bi (biot) \\
+    電流密度 & 1A/m² & \(10^{-5}\) emu \\
+    抵抗 & 1Ω (ohm) & \(10^{9}\) emu \\
+    抵抗率 & 1Ω・m & \(10^{11}\) emu \\
+    コンダクタンス & \(1\Omega ^{-1}\) & \(10^{-9}\) emu \\
+    電気量 & 1C (coulomb) & \(10^{-1}\) emu \\
+    誘電束 & 1C & \(4 \pi /10\) emu \\
+    誘電束密度 & 1C/m² & \(4 \pi 10^{5}\) emu \\
+    静電容量 & 1F (farad) & \(10^{-9}\) emu \\
+    誘電率 & 1F/m & \(4 \pi /10^{11}\) emu \\
+    起磁力・磁位 & 1A & \(4 \pi / 10\) Gb (gilbert) \\
+    磁界の強さ & 1A/m & \(4\pi \times 10^{3}\) (oersted) \\
+    磁束 & 1Wb (weber) & \(10^{8}\) Mx (maxwell) \\
+    磁束密度 & 1T (tesla) = 1 wb/m² & \(10^4\) G (gauss) \\
+    磁極の強さ & 1Wb & \(10^{8} / 4\pi\) emu \\
+    磁化の強さ & 1T & \(10^4\) emu \\
+    インダクタンス & 1H & \(10^9\) emu \\
+    磁気抵抗 & 1H (henry) & \(4\pi 10^9\) emu \\
+    誘電率 & 1H/m & \(10^7 / 4\pi\) emu \\
+    磁化率 & 1H/m & \(10^7 / (4\pi)^2\) emu \\
+    \hline
+    \end{tabular}
+    \end{table}
+    
+
+\paragraph{(2)}
+実験によって得られたデータを以下に図2-1として示す.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/Picture2-1.png}
+    \caption{図2-1: 磁束計の較正}
+\end{figure}
+
+\paragraph{(3)}
+以下に図3-1, 図3-2として, コイル(大)とコイル(小)の実験値を較正した%
+正規化磁化曲線をそれぞれ示す.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/Picture3-1.png}
+    \caption{図3-1: コイル(大)の較正した正規化磁化曲線}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/Picture3-2.png}
+    \caption{図3-2: コイル(小)の較正した正規化磁化曲線}
+\end{figure}
+
+また、以下に図3-3として, ヒステリシスループを示す.
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/Picture3-1.png}
+    \caption{図3-3: コイル(小)の較正した正規化磁化曲線}
+\end{figure}
+
+
+\paragraph{(4)}
+図3-1より, コイル(大)の飽和磁束密度は, $0.7745 T$である.
+また, 最大比透磁率は切片の傾きの最大値から,
+ただし, 真空の透磁率は$1.257 \times 10^{-6} mkgs^{-2}A^{-2}$とした.
+同様に, 図3-2より, コイル(小)の飽和磁束密度は,
+また, 最大比透磁率は切片の傾きの最大値から, 
+
+\paragraph{(5)}
+
+
+\paragraph{(6)}
+図3-3のヒステリシスループにおいて, $I = 0$での$|B|$の平均を求めると,
+残留磁束密度$B_r$は以下の式(1) で表される
+
+$B = 0$の時の$|H|$の平均を求めると, 
+保磁力$H_c$は以下の式(2)で表される
+
+また, ヒステリシス損は以下の通りに計算を行う。
 
 \end{document}
