--- a/A5/A5.tex
+++ b/A5/A5.tex
@@ -87,10 +87,12 @@
 
 \paragraph{(4)}
 図3-1より, コイル(大)の飽和磁束密度は, $0.7745 T$である.
-また, 最大比透磁率は切片の傾きの最大値から,
-ただし, 真空の透磁率は$1.257 \times 10^{-6} mkgs^{-2}A^{-2}$とした.
-同様に, 図3-2より, コイル(小)の飽和磁束密度は,
-また, 最大比透磁率は切片の傾きの最大値から, 
+
+また, 最大透磁率は切片の傾きの最大値から, $0.016$である.
+真空の透磁率は$1.257 \times 10^{-6} mkgs^{-2}A^{-2}$とすると, 最大比透磁率は以下のようになる.
+
+同様に, 図3-2より, コイル(小)の飽和磁束密度は,$1.541 T$である.
+また, 最大透磁率は切片の傾きの最大値から, $0.066$
 
 \paragraph{(5)}
 
