--- a/A5/Notebook_A5.ipynb
+++ b/A5/Notebook_A5.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "be12595b-dcd7-421e-b6ab-335be23c4727",
+   "metadata": {},
+   "source": [
+    "## 課題5用"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "28bf9aff-0e5a-42e5-9ce5-fe745928be10",
    "metadata": {},
    "outputs": [],
@@ -238,9 +246,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86fcf6f7-1c7a-44e2-b07a-1d367ee64439",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 課題6用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "caf828dc-2fce-46cc-88ce-6f50ffe0ff0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_20 = pd.read_csv(\"Dataset/抵抗20.csv\")\n",
+    "df_40 = pd.read_csv(\"Dataset/抵抗40.csv\")\n",
+    "df_60 = pd.read_csv(\"Dataset/抵抗60.csv\")\n",
+    "df_80 = pd.read_csv(\"Dataset/抵抗80.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e443c27b-02f3-4638-b5ab-0ac2e4b2955c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>H</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>162.772101</td>\n",
+       "      <td>0.774514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>92.237524</td>\n",
+       "      <td>0.044777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.035642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-92.237524</td>\n",
+       "      <td>-1.310448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-165.484969</td>\n",
+       "      <td>-0.238181</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            H         B\n",
+       "0  162.772101  0.774514\n",
+       "1   92.237524  0.044777\n",
+       "2    0.000000 -0.035642\n",
+       "3  -92.237524 -1.310448\n",
+       "4 -165.484969 -0.238181"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_20.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e4dee2d1-33e6-4550-bf8a-bee40d775d4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def b_r(df):\n",
+    "    df_h0 = df[df[\"H\"]==0]\n",
+    "    b_r = df_h0[\"B\"].abs().mean()\n",
+    "    return b_r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d4c019ab-9f36-4016-98a4-3866f093addf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "抵抗20のBr: 0.0625\n",
+      "抵抗40のBr: 0.0253\n",
+      "抵抗60のBr: 0.0164\n",
+      "抵抗80のBr: 0.0149\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"抵抗20のBr: {b_r(df_20):.4f}\")\n",
+    "print(f\"抵抗40のBr: {b_r(df_40):.4f}\")\n",
+    "print(f\"抵抗60のBr: {b_r(df_60):.4f}\")\n",
+    "print(f\"抵抗80のBr: {b_r(df_80):.4f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dce9d91-260f-4ffc-bd9d-c9b1586a0805",
+   "id": "a912efad-0bd1-4677-be24-fa701433a3ff",
    "metadata": {},
    "outputs": [],
    "source": []
