--- a/A5/A5.tex
+++ b/A5/A5.tex
@@ -7,16 +7,232 @@
 \usepackage{float}
 \usepackage{url}
 \usepackage[dvipdfmx, x11names]{xcolor}
+\usepackage{listings}
+\usepackage{amsmath}
 
 \begin{document}
-\section{検討課題}
-\paragraph{(1)}
+\section{実験の目的}
+磁束計を用いて強磁性材料の $B$-$H$ 特性を測定し、磁気測定の基本的な方法を習得する。また、磁化機構についての理解を深めることを目的とする。
 
-以下の図1-1にCGS電磁単位系とMKS単位系の換算表を示す.
+\section{実験の原理}
+環状試料に励磁コイルを巻き、反転法を用いて正規磁化曲線およびヒステリシスループを測定する。磁化状態の変化は磁束計によって検出される。磁束計は可動コイル型ガルバノメーターであり、サーチコイルにより鎖交磁束数の変化 $\Delta \Phi = n \Delta \phi$ を読み取ることで、磁束密度の変化 $\Delta B$ を求める。磁束密度は以下の式で計算される：
+\[
+\Delta B = \frac{\Delta \phi}{nS}
+\]
+ここで、$n$ はサーチコイルの巻数、$S$ は試料の断面積である。
+
+\section{実験手順}
+\begin{enumerate}
+  \item \textbf{磁束計の較正}：標準相互誘導器を用いて磁束計の指示値を較正する。
+  \item \textbf{正規磁化曲線の測定}：直流電源で励磁コイルに電流を流し、磁束計の振れから磁束密度を求める。磁界 $H$ は以下の式で計算される：
+  \[
+  H = \frac{NI}{\ell}
+  \]
+  ここで、$N$ は励磁コイルの巻数、$I$ は電流、$\ell$ は平均磁路長。
+  \item \textbf{ヒステリシスループの測定}：反転法を用いて磁束密度の変化を測定し、ヒステリシスループを描く。測定は複数の点を経由して行い、各点での磁束密度は磁束計の振れ幅から計算される。
+\end{enumerate}
+
+\section{実験の結果}
+\subsection{実験 1}
+ 以下に実験1によって得られたデータを表4-1として示す.
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-1: 磁束計の較正データ}
+    \begin{tabular}{|c|c|c|c|}
+    \hline
+    $I$ [A] & $\Phi$ (理論値) [Wb] & $\Phi$ (Mx) & $\Phi$ (wb = $10^5$ kMx) \\
+    \hline
+    0.10 & 0.002 & 160 & 0.0016 \\
+    0.20 & 0.004 & 420 & 0.0042 \\
+    0.30 & 0.006 & 600 & 0.0060 \\
+    0.39 & 0.008 & 920 & 0.0092 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+\subsection{実験 2}
+実験によって得られたデータを以下にそれぞれ表4-2, 4-3として示す.
 
 \begin{table}[H]
     \centering
-    \caption{MKSA単位系とCGS電磁単位系の比較表}
+    \captionsetup{labelformat=empty}
+    \caption{表4-2: 正規磁化曲線測定データ（コイル大）}
+    \begin{tabular}{|c|c|c|c|c|c|c|} 
+    \hline
+    $I$ [A] & $H$ [A/m] & $2\Phi$(校正前)(Mx) & $2\Phi$(kMx) & $2\Phi$ (wb) & $2B$ (T) & $B$ (T) \\
+    \hline
+    0.02 & 5.43 & 30 & 24.1268 & 0.000241268 & 0.008935852 & 0.004467926 \\
+    0.04 & 10.85 & 54 & 43.4276 & 0.000434276 & 0.016084296 & 0.008042148 \\
+    0.06 & 16.28 & 140 & 112.5888 & 0.001125888 & 0.041699556 & 0.020849778 \\
+    0.08 & 21.70 & 280 & 225.1768 & 0.002251768 & 0.083398815 & 0.041699407 \\
+    0.10 & 27.13 & 420 & 337.7648 & 0.003377648 & 0.125098074 & 0.062549037 \\
+    0.12 & 32.55 & 690 & 554.8988 & 0.005548988 & 0.205518074 & 0.102759037 \\
+    0.14 & 37.98 & 1200 & 965.0408 & 0.009650408 & 0.357422519 & 0.178711259 \\
+    0.16 & 43.41 & 1600 & 1286.7208 & 0.012867208 & 0.476563259 & 0.238281630 \\
+    0.18 & 48.83 & 2200 & 1769.2408 & 0.017692408 & 0.655274370 & 0.327637185 \\
+    0.20 & 54.26 & 2800 & 2251.7608 & 0.022517608 & 0.833985481 & 0.416992741 \\
+    0.22 & 59.68 & 3100 & 2493.0208 & 0.024930208 & 0.923341037 & 0.461670519 \\
+    0.24 & 65.11 & 3200 & 2573.4408 & 0.025734408 & 0.953126222 & 0.476563111 \\
+    0.26 & 70.53 & 3600 & 2895.1208 & 0.028951208 & 1.072266963 & 0.536133481 \\
+    0.28 & 75.96 & 3600 & 2895.1208 & 0.028951208 & 1.072266963 & 0.536133481 \\
+    0.30 & 81.39 & 3800 & 3055.9608 & 0.030559608 & 1.131837333 & 0.565918667 \\
+    0.32 & 86.81 & 4000 & 3216.8008 & 0.032168008 & 1.191407704 & 0.595703852 \\
+    0.34 & 92.24 & 4200 & 3377.6408 & 0.033776408 & 1.250978074 & 0.625489037 \\
+    0.36 & 97.66 & 4300 & 3458.0608 & 0.034580608 & 1.280763259 & 0.640381630 \\
+    0.38 & 103.09 & 4400 & 3538.4808 & 0.035384808 & 1.310548444 & 0.655274222 \\
+    0.40 & 108.51 & 4400 & 3538.4808 & 0.035384808 & 1.310548444 & 0.655274222 \\
+    0.45 & 122.08 & 4600 & 3699.3208 & 0.036993208 & 1.370118815 & 0.685059407 \\
+    0.50 & 135.64 & 4900 & 3940.5808 & 0.039405808 & 1.459474370 & 0.729737185 \\
+    0.55 & 149.21 & 5100 & 4101.4208 & 0.041014208 & 1.519044741 & 0.759522370 \\
+    0.60 & 162.77 & 5200 & 4181.8408 & 0.041818408 & 1.548829926 & 0.774414963 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \captionsetup{labelformat=empty}
+    \centering
+    \caption{表4-3: 正規磁化曲線測定データ（コイル小）}
+    \begin{tabular}{|c|c|c|c|c|c|c|}
+    \hline
+    $I$ [A] & $H$ [A/m] & $2\Phi$ (校正前) [kMx] & $2\Phi$[kMx] & $2\Phi$ (wb) & $2B$ (T) & $B$ (T) \\
+    \hline
+    0.01 & 7.96 & 22 & 18.98602 & 0.00018986 & 0.005650601 & 0.002825301 \\
+    0.02 & 15.92 & 82 & 70.76602 & 0.00070766 & 0.021061315 & 0.010530658 \\
+    0.03 & 23.87 & 4200 & 3624.60002 & 0.03624600 & 1.078750006 & 0.539375003 \\
+    0.04 & 31.83 & 6000 & 5178.00002 & 0.05178000 & 1.541071435 & 0.770535717 \\
+    0.05 & 39.79 & 6600 & 5695.80002 & 0.05695800 & 1.695178577 & 0.847589289 \\
+    0.06 & 47.75 & 7200 & 6213.60002 & 0.06213600 & 1.849285720 & 0.924642860 \\
+    0.07 & 55.70 & 7600 & 6558.80002 & 0.06558800 & 1.952023815 & 0.976011908 \\
+    0.08 & 63.66 & 7900 & 6817.70002 & 0.06817700 & 2.029077387 & 1.014538693 \\
+    0.09 & 71.62 & 8100 & 6990.30002 & 0.06990300 & 2.080446435 & 1.040223217 \\
+    0.10 & 79.58 & 8400 & 7249.20002 & 0.07249200 & 2.157500006 & 1.078750003 \\
+    0.11 & 87.54 & 8600 & 7421.80002 & 0.07421800 & 2.208869054 & 1.104434527 \\
+    0.12 & 95.49 & 8600 & 7421.80002 & 0.07421800 & 2.208869054 & 1.104434527 \\
+    0.13 & 103.45 & 8600 & 7421.80002 & 0.07421800 & 2.208869054 & 1.104434527 \\
+    0.14 & 111.41 & 8800 & 7594.40002 & 0.07594400 & 2.260238101 & 1.130119051 \\
+    0.15 & 119.37 & 9100 & 7853.30002 & 0.07853300 & 2.337291673 & 1.168645836 \\
+    0.16 & 127.32 & 9200 & 7939.60002 & 0.07939600 & 2.362976196 & 1.181488098 \\
+    0.17 & 135.28 & 9100 & 7853.30002 & 0.07853300 & 2.337291673 & 1.168645836 \\
+    0.18 & 143.24 & 9200 & 7939.60002 & 0.07939600 & 2.362976196 & 1.181488098 \\
+    0.19 & 151.20 & 9400 & 8112.20002 & 0.08112200 & 2.414345244 & 1.207172622 \\
+    0.20 & 159.15 & 9400 & 8112.20002 & 0.08112200 & 2.414345244 & 1.207172622 \\
+    0.21 & 167.11 & 9400 & 8112.20002 & 0.08112200 & 2.414345244 & 1.207172622 \\
+    0.22 & 175.07 & 9500 & 8198.50002 & 0.08198500 & 2.440029768 & 1.220014884 \\
+    0.23 & 183.03 & 9600 & 8284.80002 & 0.08284800 & 2.465714292 & 1.232857146 \\
+    0.24 & 190.99 & 9900 & 8543.70002 & 0.08543700 & 2.542767863 & 1.271383932 \\
+    0.25 & 198.94 & 10000 & 8630.00002 & 0.08630000 & 2.568452387 & 1.284226193 \\
+    0.30 & 238.73 & 10500 & 9061.50002 & 0.09061500 & 2.696875006 & 1.348437503 \\
+    0.35 & 278.52 & 11000 & 9493.00002 & 0.09493000 & 2.825297625 & 1.412648813 \\
+    0.40 & 318.31 & 11000 & 9493.00002 & 0.09493000 & 2.825297625 & 1.412648813 \\
+    0.45 & 358.10 & 11500 & 9924.50002 & 0.09924500 & 2.953720244 & 1.476860122 \\
+    0.50 & 397.89 & 11500 & 9924.50002 & 0.09924500 & 2.953720244 & 1.476860122 \\
+    0.55 & 437.68 & 11500 & 9924.50002 & 0.09924500 & 2.953720244 & 1.476860122 \\
+    0.60 & 477.46 & 12000 & 10356.00002 & 0.10356000 & 3.082142863 & 1.541071432 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+
+\subsection{実験3}
+
+実験によって得られたデータを以下に抵抗別にそれぞれ表4-4から4-7として示す.
+
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-4: ヒステリシスループ測定データ(20Ω)}
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+    \hline
+    点 & $I$ [A] & $H$ [A/m] & $B$ [wb] & $\Phi$ [Mx] & 区間 &$\Delta \Phi$ [kMx]& $\Delta \Phi$ (校正後)[kMx] &$\Delta B$ [wb] \\
+    \hline
+    a & 0.60 & 162.77 & 0.774514 & 2600 & a-b & -2450 & -1970.2892 & -0.729736741 \\
+    b & 0.34 & 92.24 & 0.044777 & 150 & b-c & -270 & -217.1332 & -0.080419704 \\
+    c & 0.00 & 0.00 & -0.035642 & -120 & c-d & -4280 & -3441.9752 & -1.27480563 \\
+    d & -0.34 & -92.24 & -1.310448 & -4400 & d-e & 3600 & 2895.1208 & 1.072266963 \\
+    e & -0.61 & -165.48 & -0.238181 & -800 & e-f & 1120 & 900.7048 & 0.33359437 \\
+    f & -0.34 & -92.24 & 0.095413 & 320 & f-g & -20 & -16.0832 & -0.005956741 \\
+    g & 0.00 & 0.00 & 0.089457 & 300 & g-h & 4100 & 3297.2208 & 1.221192889 \\
+    h & 0.34 & 92.24 & 1.310649 & 4400 & h-a & -3800 & -3055.9592 &  -1.131836741 \\
+    a & 0.61 & 165.48 & 1.131939 & 600 & & -600 & -482.5192 & -0.178710815 \\    
+    \hline
+    \end{tabular}
+    
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-5: ヒステリシスループ測定データ(40Ω)}
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+    \hline
+    点 & $I$ [A] & $H$ [A/m] & $B$ [wb] & $\Phi$ [Mx] & 区間 &$\Delta \Phi$[kMx] & $\Delta \Phi$ (校正後)[kMx] & $\Delta B$ [wb] \\
+    \hline
+    a & 0.60 & 162.77 & 0.774514 & 2600 & a-b & -2640 & -2123.0872 & -0.786328593 \\
+    b & 0.17 & 46.12 & -0.011815 & -40 & b-c & -20 & -16.0832 & -0.005956741 \\
+    c & 0.00 & 0.00 & -0.017771 & -60 & c-d & -2940 & -2364.3472 & -0.875684148 \\
+    d & -0.17 & -46.12 & -0.893455 & -3000 & d-e & 1000 & 804.2008 & 0.297852148 \\
+    e & -0.60 & -162.77 & -0.595603 & -2000 & e-f & 2520 & 2026.5848 & 0.750586963 \\
+    f & -0.17 & -46.12 & 0.154984 & 520 & f-g & -410 & -329.7212 & -0.122118963 \\
+    g & 0.00 & 0.00 & 0.032865 & 110 & g-h & 2890 & 2324.1388 & 0.860792148 \\
+    h & 0.17 & 46.12 & 0.893657 & 3000 & h-a & -1000 & -804.1992 & -0.297851556 \\
+    a & 0.60 & 162.77 & 0.595805 & 2000 & & -2000 & -1608.3992 & -0.595703407 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-6: ヒステリシスループ測定データ(60Ω)}
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+    \hline
+    点 & $I$ [A] & $H$ [A/m] & $B$ [wb] & $\Phi$[Mx]& 区間 & $\Delta \Phi[kMx]$ & $\Delta \Phi$(校正後)[kMx] & $\Delta B$ [wb] \\
+    \hline
+    a & 0.60 & 162.77 & 0.774514 & 2600 & a-b & -2680 & -2155.2552 & -0.798242667 \\
+    b & 0.11 & 29.84 & -0.023729 & -80 & b-c & 30 & 24.1268 & 0.008935852 \\
+    c & 0.00 & 0.00 & -0.014793 & -50 & c-d & -1150 & -924.8292 & -0.342529333 \\
+    d & -0.11 & -29.84 & -0.357322 & -1200 & d-e & -2400 & -1930.0792 & -0.714844148 \\
+    e & -0.60 & -162.77 & -1.072166 & -3600 & e-f & 4180 & 3361.5568 & 1.245021037 \\
+    f & -0.11 & -29.84 & 0.172855 & 580 & f-g & -520 & -418.1832 & -0.154882667 \\
+    g & 0.00 & 0.00 & 0.017972 & 60 & g-h & 1340 & 1077.6288 & 0.399121778 \\
+    h & 0.11 & 29.84 & 0.417094 & 1400 & h-a & 2100 & 1688.8208 & 0.625489185 \\
+    a & 0.59 & 160.06 & 1.042583 & 3500 & & -3500 & -2814.6992 & -1.042481185 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表4-7: ヒステリシスループ測定データ(60Ω)}
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+    \hline
+    点 & $I$ [A] & $H$ [A/m] & $B$ [wb] & $\Phi$[Mx]& 区間 & $\Delta \Phi[kMx]$ & $\Delta \Phi$(校正後)[kMx] & $\Delta B$ [wb] \\
+    \hline
+    a & 0.60 & 162.77 & 0.774514 & 2600 & a-b & -2680 & -2155.2552 & -0.798242667 \\
+    b & 0.11 & 29.84 & -0.023729 & -80 & b-c & 30 & 24.1268 & 0.008935852 \\
+    c & 0.00 & 0.00 & -0.014793 & -50 & c-d & -1150 & -924.8292 & -0.342529333 \\
+    d & -0.11 & -29.84 & -0.357322 & -1200 & d-e & -2400 & -1930.0792 &  -0.714844148 \\
+    e & -0.60 & -162.77 & -1.072166 & -3600 & e-f & 4180 & 3361.5568 &  1.245021037 \\
+    f & -0.11 & -29.84 & 0.172855 & 580 & f-g & -520 & -418.1832 &  -0.154882667 \\
+    g & 0.00 & 0.00 & 0.017972 & 60 & g-h & 1340 & 1077.6288 &  0.399121778 \\
+    h & 0.11 & 29.84 & 0.417094 & 1400 & h-a & 2100 & 1688.8208 & 0.625489185 \\
+    a & 0.59 & 160.06 & 1.042583 & 3500 & & -3500 & -2814.6992 & -1.042481185 \\
+    \hline
+    \end{tabular}
+\end{table}
+
+\section{検討課題}
+\subsection{検討課題(1)}
+
+　以下の表1-1にCGS電磁単位系とMKS単位系の換算表を示す.
+
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表1-1: MKS単位系とCGS電磁単位系の比較表}
     \begin{tabular}{|l|l|l|}
     \hline
     \textbf{電気・磁気の量} & \textbf{MKSA単位} & \textbf{CGS電磁単位} \\
@@ -48,8 +264,8 @@
     \end{table}
     
 
-\paragraph{(2)}
-実験によって得られたデータを以下に図2-1として示す.
+\subsection{検討課題(2)}
+　実験によって得られたデータを以下に図2-1として示す.
 
 \begin{figure}[H]
     \centering
@@ -58,8 +274,8 @@
     \caption{図2-1: 磁束計の較正}
 \end{figure}
 
-\paragraph{(3)}
-以下に図3-1, 図3-2として, コイル(大)とコイル(小)の実験値を較正した%
+\subsection{検討課題(3)}
+　以下に図3-1, 図3-2として, コイル(大)とコイル(小)の実験値を較正した%
 正規化磁化曲線をそれぞれ示す.
 
 \begin{figure}[H]
@@ -80,30 +296,105 @@
 \begin{figure}[H]
     \centering
     \captionsetup{labelformat=empty}
-    \includegraphics[width=10cm]{Pictures/Picture3-1.png}
-    \caption{図3-3: コイル(小)の較正した正規化磁化曲線}
+    \includegraphics[width=10cm]{Pictures/hysteresis_loop1.png}
+    \caption{図3-3: ヒステリシスループ}
 \end{figure}
 
 
-\paragraph{(4)}
-図3-1より, コイル(大)の飽和磁束密度は, $0.7745 T$である.
+\subsection{検討課題(4)}
 
-また, 最大透磁率は切片の傾きの最大値から, $0.016$である.
-真空の透磁率は$1.257 \times 10^{-6} mkgs^{-2}A^{-2}$とすると, 最大比透磁率は以下のようになる.
+　図3-1より, コイル(大)の飽和磁束密度は, $0.7745 T$である.%
+また, 最大透磁率$\mu_{max}$は切片の傾きの最大値から, $0.016$である.%
+真空の透磁率は$1.257 \times 10^{-6} mkgs^{-2}A^{-2}$とすると, 最大比透磁率は以下の式(1)のようになる.%
 
-同様に, 図3-2より, コイル(小)の飽和磁束密度は,$1.541 T$である.
-また, 最大透磁率は切片の傾きの最大値から, $0.066$
+\begin{equation}
+    \mu_r = \frac{\mu_{max}}{\mu_0} = 13102
+\end{equation}
 
-\paragraph{(5)}
+\noindent
+同様に, 図3-2より, コイル(小)の飽和磁束密度は,$1.541 T$である.%
+また, 最大透磁率は切片の傾きの最大値から, $0.066$となり, %
+(1)式と同様に最大比透磁率を求めると, $\mu_r = 52870$となる.
+
+\subsection{検討課題(5)}
+　飽和磁束密度と最大比透磁率の値の違いの原因はコイルの巻き数や大きさ以外では磁心材料の性質が%
+考えられる. 構成元素や結晶構造の違いによって磁束の通りやすさが変化する.%
+
+\subsection{検討課題(6)}
+図3-3のヒステリシスループにおいて, $H = 0$での$|B|$の平均を求め, 残留磁化密度%
+$B_r$を求める. それぞれの抵抗値での値を以下の表6-1にまとめる.
+
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表6-1: 残留磁化密度}
+    \begin{tabular}{|c|c|}
+    \hline
+    \textbf{抵抗値 (Ω)} & \textbf{残留磁化密度 (T)} \\
+    \hline
+    20 & 0.0625 \\
+    \hline
+    40 & 0.0253\\
+    \hline
+    60 & 0.0164\\
+    \hline
+    80 & 0.0149\\
+    \hline
+    \end{tabular}
+\end{table}
+
+\noindent
+各抵抗値での平均を取ると, $B_r = 0.029 T$となる.
+\\[1ex]
+　また、$B = 0$の時の$|H|$の平均をとり, 保磁力$H_c$を求める.
+ただし, $B = 0$の時の$|H|$のデータがなかったため, 線形補間を行った.
+なお, 補完後の$B = 0$点において$H < 0$の点をHc1, $H > 0$の点をHc2とする
+\begin{table}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \caption{表6-2: 保持力}
+    \begin{tabular}{|c|c|c|c|}
+    \hline
+    \textbf{抵抗値 (Ω)} & \textbf{Hc1} & \textbf{Hc2}& \textbf{保持力Hc(A/m)} \\
+    \hline
+    20 & -115 & 25 & 70\\
+    \hline
+    40 & -70 & 30 & 50\\
+    \hline
+    60 & -50 & 33 & 42 \\
+    \hline
+    80 & -40 & 27 & 34\\
+    \hline
+    \end{tabular}
+\end{table}
+
+\noindent
+各抵抗値における平均を取ると, $H_c = 48.75$となる.
+\\[1ex]
+　また, ヒステリシス損$H_c$を以下の図6-1のように面積を近似して求めた.
+
+\begin{figure}[H]
+    \centering
+    \captionsetup{labelformat=empty}
+    \includegraphics[width=10cm]{Pictures/hysteresis_area.jpg}
+    \caption{図6-1: ヒステリシス損の面積近似}
+\end{figure}
+
+$S_1 = 30.0$, $S_2 = 14.4$となった. $S_1 = S_4, S_2=S_3$とし,%
+全体の面積を求めると, ヒステリシス損 = 88.8 となる.
 
 
-\paragraph{(6)}
-図3-3のヒステリシスループにおいて, $I = 0$での$|B|$の平均を求めると,
-残留磁束密度$B_r$は以下の式(1) で表される
+\section{参考文献}
 
-$B = 0$の時の$|H|$の平均を求めると, 
-保磁力$H_c$は以下の式(2)で表される
+\url{https://detail-infomation.com/saturation-magnetic-flux-density/}
 
-また, ヒステリシス損は以下の通りに計算を行う。
+\noindent
+\url{https://detail-infomation.com/permeability/}
+
+\noindent
+\\また, 以下に今回の実験に使用したPythonによる解析コードのリポジトリのurlを示す.
+
+\noindent
+\url{https://github.com/entyswimmer/Experiment_A.git}
 
 \end{document}
